# gRPC-with-rust

./: Cargo.toml  README.md
proto/: say.proto
src/: client.rs  server.rs
