[package]
name = "gRPC-with-rust"
version = "0.1.0"
authors = ["David Seidenberg <david.seidenberg@pubnub.com>"]
edition = "2018"

[dependencies]
prost = "0.6.1"
tonic = {version="0.2.0", features = ["tls"]}
tokio = {versoin="0.2.18", features = ["stream", "macros"]}
futures = "0.3"

[build-dependencies]
tonic-build = "0.2.0"
